<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.product.ProductDetailFragment"
        android:padding="@dimen/scrollview_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_details_name"
                android:textSize="@dimen/detail_label"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerPictures"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/textViewCounter"
                    android:layout_width="@dimen/counter_view_size"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/counter_text_size"
                    android:background="@drawable/counter_background"
                    android:layout_margin="@dimen/counter_margin"
                    android:gravity="center" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/id_label"
                            android:textSize="@dimen/detail_label" />

                        <TextView
                            android:id="@+id/textViewId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/product_details_name"
                            android:textSize="@dimen/detail_label"
                            />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/status_label"
                            android:textSize="@dimen/detail_label" />

                        <TextView
                            android:id="@+id/textViewStatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/product_details_name"
                            android:textSize="@dimen/detail_label" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/domain_label"
                            android:textSize="@dimen/detail_label" />

                        <TextView
                            android:id="@+id/textViewDomain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/product_details_name"
                            android:textSize="@dimen/detail_label" />

                    </TableRow>

                </TableLayout>

                <Button
                    android:id="@+id/buttonBuyNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/button_margin"
                    android:background="@drawable/buy_button_background"
                    android:textColor="@color/white"
                    android:text="@string/buy_button"/>

                <Button
                    android:id="@+id/buttonAddToCar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/button_margin"
                    android:background="@drawable/add_button_background"
                    android:textColor="@color/blue_buy_button"
                    android:text="@string/add_button"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="@dimen/margin_separator"
                    android:layout_marginBottom="@dimen/margin_separator"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/features_label"
                    android:textSize="@dimen/detail_label"
                    android:textStyle="bold"
                    android:textColor="@color/blue_buy_button"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/textViewFeatures"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_separator"
                    android:text="@string/product_details_name" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
