<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/mainFragment">

    <!--Main-->
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.marco.buscamercadolibre.view.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
        <action
            android:id="@+id/action_mainFragment_to_favFragment"
            app:destination="@id/favFragment" />
    </fragment>

    <!--Detalles de producto-->
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.marco.buscamercadolibre.view.product.ProductDetailFragment"
        android:label="@string/product_details_name"
        tools:layout="@layout/fragment_product_detail" >
        <action
            android:id="@+id/action_productDetailFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_productDetailFragment_to_favFragment"
            app:destination="@id/favFragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <!--Favoritos-->
    <fragment
        android:id="@+id/favFragment"
        android:name="com.marco.buscamercadolibre.view.fav.FavFragment"
        android:label="@string/fav_name"
        tools:layout="@layout/fragment_fav" >
        <action
            android:id="@+id/action_favFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_favFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
</navigation>